<resources>
    <string name="app_name">CSE 476 Project App</string>
    <string name="leader_board_title">Top Students</string>
    <string name="leaderboard_weekly_switch_text">Weekly</string>
    <string name="leader_board_button_text">Leader Board</string>
    <string name="start_studying">Start Studying</string>
    <string name="see_leaderboard">Go To Leaderboard</string>
    <string name="not_signed_in">No user signed in</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_button">Sign In/Out</string>
    <string name="client_id">978486740806-58nsjhbr6otnfc72io6a9t0e658v2jka.apps.googleusercontent.com</string>
    <string name="url_logout_url">msu.edu.cse476.hoerdema.cse476projectapp:/logout</string>
    <string name="url_auth_redirect">msu.edu.cse476.hoerdema.cse476projectapp:/oauth2redirect</string>
    <string name="url_token_exchange">https://www.googleapis.com/oauth2/v4/token</string>
    <string name="url_api_call">https://www.googleapis.com/drive/v2/files</string>
    <string name="icon_description">study timer logo with Spartan head and various study materials</string>
    <string name="url_logout">https://accounts.google.com/o/oauth2/revoke?token=</string>
    <string name="studying_for">You\'ve been studying for:</string>
    <string name="dummy">dummy</string>
    <string name="stop_study">Stop Studying</string>
    <string name="empty_stopwatch">00:00:00</string>
    <string name="title_image_description">Logo with the title of the app \'GeoStudy\'</string>
    <string name="home_button">Home</string>
    <string name="locations">To study you must be in either the STEM building, the Computer Center, or the Main Library.</string>
    <string name="one">1.</string>
    <string name="time">10</string>
    <string name="start_studying_menu">Start Studying</string>
    <string name="home_menu">Sign Out</string>
    <string name="geostudy">Geostudy</string>
</resources>