<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="horizontal"
              android:padding="8dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

  <TextView
      android:id="@+id/place"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      tools:text="@string/one" />

  <TextView
      android:id="@+id/userName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/dummy" />

  <TextView
      android:id="@+id/userTIme"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/time"
      android:textAlignment="viewEnd" />
</LinearLayout>